process seoul metropolitan population data and create a draft line chart class for the population graph

--- a/pipeline/population/process_future_pop.ipynb
+++ b/pipeline/population/process_future_pop.ipynb
@@ -1956,9 +1956,280 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb7bfeaf",
+   "metadata": {},
+   "source": [
+    "# 수도권 전체 인구 및 생산가능인구 계산"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "59b126b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2026</th>\n",
+       "      <th>2027</th>\n",
+       "      <th>2028</th>\n",
+       "      <th>2029</th>\n",
+       "      <th>2030</th>\n",
+       "      <th>2031</th>\n",
+       "      <th>2032</th>\n",
+       "      <th>2033</th>\n",
+       "      <th>2034</th>\n",
+       "      <th>2035</th>\n",
+       "      <th>2036</th>\n",
+       "      <th>2037</th>\n",
+       "      <th>2038</th>\n",
+       "      <th>2039</th>\n",
+       "      <th>2040</th>\n",
+       "      <th>2041</th>\n",
+       "      <th>2042</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26380070</td>\n",
+       "      <td>26410280</td>\n",
+       "      <td>26436465</td>\n",
+       "      <td>26458743</td>\n",
+       "      <td>26477379</td>\n",
+       "      <td>26491936</td>\n",
+       "      <td>26501957</td>\n",
+       "      <td>26507189</td>\n",
+       "      <td>26507113</td>\n",
+       "      <td>26500808</td>\n",
+       "      <td>26487566</td>\n",
+       "      <td>26467193</td>\n",
+       "      <td>26436600</td>\n",
+       "      <td>26393063</td>\n",
+       "      <td>26337283</td>\n",
+       "      <td>26268949.0</td>\n",
+       "      <td>26188184.0</td>\n",
+       "      <td>total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18755474</td>\n",
+       "      <td>18662639</td>\n",
+       "      <td>18521859</td>\n",
+       "      <td>18417496</td>\n",
+       "      <td>18281396</td>\n",
+       "      <td>18148096</td>\n",
+       "      <td>17996088</td>\n",
+       "      <td>17810052</td>\n",
+       "      <td>17565006</td>\n",
+       "      <td>17324008</td>\n",
+       "      <td>17053270</td>\n",
+       "      <td>16790856</td>\n",
+       "      <td>16523581</td>\n",
+       "      <td>16254693</td>\n",
+       "      <td>16009740</td>\n",
+       "      <td>15781236.0</td>\n",
+       "      <td>15561831.0</td>\n",
+       "      <td>working_age</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       2026      2027      2028      2029      2030      2031      2032  \\\n",
+       "0  26380070  26410280  26436465  26458743  26477379  26491936  26501957   \n",
+       "1  18755474  18662639  18521859  18417496  18281396  18148096  17996088   \n",
+       "\n",
+       "       2033      2034      2035      2036      2037      2038      2039  \\\n",
+       "0  26507189  26507113  26500808  26487566  26467193  26436600  26393063   \n",
+       "1  17810052  17565006  17324008  17053270  16790856  16523581  16254693   \n",
+       "\n",
+       "       2040        2041        2042         type  \n",
+       "0  26337283  26268949.0  26188184.0        total  \n",
+       "1  16009740  15781236.0  15561831.0  working_age  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 수도권 데이터 필터링링\n",
+    "df_seoul_metropolitan = df_total.loc[df_total['sigungu'].isin(['서울','인천','경기'])].copy()\n",
+    "df_seoul_metropolitan_working_age = df_working_age.loc[df_working_age['sigungu'].isin(['서울','인천','경기'])].copy()\n",
+    "\n",
+    "# 2026-2042 수도권 전체 인구 계산\n",
+    "df_seoul_metropolitan = df_seoul_metropolitan.sum().loc[[str(i) for i in range(2026, 2043)]]\n",
+    "df_seoul_metropolitan.loc['type'] = 'total'\n",
+    "\n",
+    "# 2026-2042 수도권 전체 인구 중 근로 가능 인구 계산\n",
+    "df_seoul_metropolitan_working_age = df_seoul_metropolitan_working_age.sum().loc[[str(i) for i in range(2026, 2043)]]\n",
+    "df_seoul_metropolitan_working_age.loc['type'] = 'working_age'\n",
+    "\n",
+    "df_seoul_metropolitan = pd.concat([df_seoul_metropolitan,df_seoul_metropolitan_working_age], axis=1).T\n",
+    "df_seoul_metropolitan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3708a27f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seoul_metropolitan.to_json('./processed_data/seoul_metropolitan_population.json', orient='records')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b126b6",
+   "id": "7ffb1d32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2026</th>\n",
+       "      <th>2027</th>\n",
+       "      <th>2028</th>\n",
+       "      <th>2029</th>\n",
+       "      <th>2030</th>\n",
+       "      <th>2031</th>\n",
+       "      <th>2032</th>\n",
+       "      <th>2033</th>\n",
+       "      <th>2034</th>\n",
+       "      <th>2035</th>\n",
+       "      <th>2036</th>\n",
+       "      <th>2037</th>\n",
+       "      <th>2038</th>\n",
+       "      <th>2039</th>\n",
+       "      <th>2040</th>\n",
+       "      <th>2041</th>\n",
+       "      <th>2042</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26380070</td>\n",
+       "      <td>26410280</td>\n",
+       "      <td>26436465</td>\n",
+       "      <td>26458743</td>\n",
+       "      <td>26477379</td>\n",
+       "      <td>26491936</td>\n",
+       "      <td>26501957</td>\n",
+       "      <td>26507189</td>\n",
+       "      <td>26507113</td>\n",
+       "      <td>26500808</td>\n",
+       "      <td>26487566</td>\n",
+       "      <td>26467193</td>\n",
+       "      <td>26436600</td>\n",
+       "      <td>26393063</td>\n",
+       "      <td>26337283</td>\n",
+       "      <td>26268949.0</td>\n",
+       "      <td>26188184.0</td>\n",
+       "      <td>total</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18755474</td>\n",
+       "      <td>18662639</td>\n",
+       "      <td>18521859</td>\n",
+       "      <td>18417496</td>\n",
+       "      <td>18281396</td>\n",
+       "      <td>18148096</td>\n",
+       "      <td>17996088</td>\n",
+       "      <td>17810052</td>\n",
+       "      <td>17565006</td>\n",
+       "      <td>17324008</td>\n",
+       "      <td>17053270</td>\n",
+       "      <td>16790856</td>\n",
+       "      <td>16523581</td>\n",
+       "      <td>16254693</td>\n",
+       "      <td>16009740</td>\n",
+       "      <td>15781236.0</td>\n",
+       "      <td>15561831.0</td>\n",
+       "      <td>working_age</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       2026      2027      2028      2029      2030      2031      2032  \\\n",
+       "0  26380070  26410280  26436465  26458743  26477379  26491936  26501957   \n",
+       "1  18755474  18662639  18521859  18417496  18281396  18148096  17996088   \n",
+       "\n",
+       "       2033      2034      2035      2036      2037      2038      2039  \\\n",
+       "0  26507189  26507113  26500808  26487566  26467193  26436600  26393063   \n",
+       "1  17810052  17565006  17324008  17053270  16790856  16523581  16254693   \n",
+       "\n",
+       "       2040        2041        2042         type  \n",
+       "0  26337283  26268949.0  26188184.0        total  \n",
+       "1  16009740  15781236.0  15561831.0  working_age  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2f7ffcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94acc2af",
    "metadata": {},
    "outputs": [],
    "source": []
